fix the horizontal scroll problem

--- a/query.css
+++ b/query.css
@@ -7,16 +7,15 @@
   /* header */
   nav {
     position: relative;
+    padding-bottom: 20px;
   }
-  .welcome {
+  nav form {
     font-size: 1.6rem;
     position: absolute;
     bottom: -35px;
     left: 0;
   }
-  .logo {
-    margin-right: 10px;
-  }
+
   /* balance */
   .balance {
     margin-top: 20px;
